Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -97,7 +97,7 @@ Parser development is a mature and well understood practice. We uncovered parser
 
 \begin{figure}
   \centering %
-  \subfloat[Testbed $3\pm$ loop indefinitely, leaking memory until the entire system memory is depleted and the process crashes.]{%
+  \subfloat[Testbeds $3\pm$ loop indefinitely, leaking memory until the entire system memory is depleted and the process crashes.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetPtrIntSpin}}}%
     \label{lst:beignet-ptr-int-spin}
   }\\%
@@ -180,11 +180,11 @@ On Testbeds~$3\pm$, the statement \texttt{int n = mad24(a, (32), get\_global\_si
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindRaceSwitch}}}%
     \label{lst:oclgrind-race-switch}
   }\\%
-  \subfloat[Testbed $3\pm$ silently miscompiles ternary ops in which the operands are global buffers.]{%
+  \subfloat[Testbeds $3\pm$ silently miscompile ternary ops in which the operands are global buffers.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetTernary}}}%
     \label{lst:beig-ternary-ops}
   }\\%
-  \subfloat[Compilation should fail due to call to undefined function \texttt{B()}; Testbed $8\pm$ silently succeed then crash upon kernel execution.]{%
+  \subfloat[Compilation should fail due to call to undefined function \texttt{B()}; Testbeds $8\pm$ silently succeed then crash upon kernel execution.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\PoclUndefinedSymbols}}}%
     \label{lst:pocl-undefined-symbols}
   }\\%
@@ -409,7 +409,7 @@ Of the build crashes, 68\% failed silently, and the remainder were caused by the
 % bf column: CLSmith generated 1 unique build failure (empty declaration). DeepSmith generated 6 unique build failures (including the same empty declaration as CLSmith).
 The 4719 \abf results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. DeepSmith also generated these statements, but with a much lower probability (only \todo{XX} programs) given that it is an unusual construct.
 % https://github.com/ChrisLidbury/CLSmith/issues/7
-Similarly, Testbeds 4--7 reject DeepSmith kernels which omit a type specified (e.g. \texttt{\_\_global* a}), whereas all other Testbeds emit a warning and default to \texttt{int} type.
+Similarly, Testbeds 4--7 reject DeepSmith kernels which omit a type specifier (e.g. \texttt{\_\_global* a}), whereas all other Testbeds emit a warning and default to \texttt{int} type.
 
 % c column
 
@@ -448,10 +448,9 @@ Over the course of testing, a combined $3.4 \times 10^8$ lines of CLSmith code w
 
 The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL drivers. This in turn causes Clang-related defects to potentially affect multiple compilers, for example the one in Figure~\ref{lst:almost-everything-crash}. To evaluate the impact of Clang, we used debug+assert builds of every LLVM release in the past 24 months and processed 75,000 DeepSmith kernels through the Clang front-end (this includes the lexer, parser, and type checker, but not code generation).
 
-Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 6.0.0.
+Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 5.0.0.
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
-Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. The development trunk (6.0.0) has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. We have submitted bug reports for each of the three assertions triggered in LLVM 6.0.0, and two distinct unreachables.
-\am{5.0 isn't quite out yet, 6.0 won't be out for six months!  Call "Release 6.0" something like "Trunk (6.0)"?}
+Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between some releases. Notably, the current development trunk has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 were triggered by some kernels in the development trunk but not under prior release. We have submitted bug reports for each of the three assertions triggered in the development trunk, and two distinct unreachables.
 
 \begin{table}
   \footnotesize %
