Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -22,7 +22,7 @@ OpenCL is typically compiled online, which amplifies the significance of detecti
 
 \begin{figure}
   \centering %
-  \subfloat[Testbed $10\pm$ assertion \emph{Uncorrected typos!} during semantic analysis.]{%
+  \subfloat[Testbeds $10\pm$ assertion \emph{Uncorrected typos!} during semantic analysis.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindUncorrectedTypos}}}%
     \label{lst:oclgrind-uncorrected-typos}
   }\\%
@@ -38,11 +38,11 @@ OpenCL is typically compiled online, which amplifies the significance of detecti
 %    \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindSemaAssertion}}}%
 %    \label{lst:oclgrind-uncorrected-typos}
 %  }\\%
-  \subfloat[Testbed $3\pm$ assertion \emph{sel.hasDoubleType()} during code generation.]{%
+  \subfloat[Testbeds $3\pm$ assertion \emph{sel.hasDoubleType()} during code generation.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelGtDoubleAssertion}}}%
     \label{lst:intel-gt2-double-assertion}
   }\\%
-  \subfloat[Testbed $3\pm$ assertion \emph{scalarizeInsert} during code generation.]{%
+  \subfloat[Testbeds $3\pm$ assertion \emph{scalarizeInsert} during code generation.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\BeignetScalarizeInsert}}}%
     \label{lst:beignet-scalarize-insert}
   }\\%
@@ -338,31 +338,25 @@ The Intel CPU testbeds (Testbeds 4--7) would occasionally emit a stack trace upo
   % Result id: 110876
   \subfloat[\emph{Post-Dominance Frontier Construction} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelPostDominanceFrontier}}}%
-    \label{lst:intel-postdominance-frontier}
   }\\%
   % Program id: 31656
   \subfloat[\emph{Predicator} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelPredicator}}}%
-    \label{lst:intel-predicator}
   }\\%
   \subfloat[\emph{Combine redundant instructions} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelCombineRedundant}}}%
-    \label{lst:intel-spir-metadata}
   }\\%
   % Program id: 10596
   \subfloat[\emph{PrepareKernelArgs} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelPrepareKernelArgs}}}%
-    \label{lst:intel-prepare-kernel-args}
   }\\%
   % Program id: 37443
   \subfloat[\emph{Add SPIR related module scope metadata} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelSPIRMetadata}}}%
-    \label{lst:intel-spir-metadata}
   }\\%
   % Program id: 44105
   \subfloat[\emph{Intel OpenCL RemoveDuplicationBarrier} pass.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelRemoveDupeBarrier}}}%
-    \label{lst:intel-spir-metadata}
   }\\%
   % CLgen result ID 452598
   % \cc{TODO: Intel pass \emph{X86 DAG->DAG Instruction Selection}}
@@ -407,9 +401,9 @@ The integrated GPU Testbed ($3\pm$) frequently failed to compile CLSmith kernels
 Of the build crashes, 68\% failed silently, and the remainder were caused by the same two compiler assertions for which DeepSmith generated 4 line test cases, shown in Figure~\ref{lst:beig-assertions}. DeepSmith also triggered silent build crashes in Testbed $3\pm$, and a further 8 distinct compiler assertions.
 
 % bf column: CLSmith generated 1 unique build failure (empty declaration). DeepSmith generated 6 unique build failures (including the same empty declaration as CLSmith).
-The 4719 \abf results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. DeepSmith also generated these statements, but with a much lower probability (only \todo{XX} programs) given that it is an unusual construct.
+The 4719 \abf results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. DeepSmith also generated these statements, but with a much lower probability, given that it is an unusual construct (0.6\% of programs, versus 7.0\% of CLSmith programs).
 % https://github.com/ChrisLidbury/CLSmith/issues/7
-Similarly, Testbeds 4--7 reject DeepSmith kernels which omit a type specifier (e.g. \texttt{\_\_global* a}), whereas all other Testbeds emit a warning and default to \texttt{int} type.
+Similarly, Testbeds 4--7 reject DeepSmith kernels which omit a type specifier (e.g. \texttt{global* a}), whereas all other Testbeds emit a warning and default to \texttt{int} type.
 
 % c column
 
@@ -448,7 +442,7 @@ Over the course of testing, a combined $3.4 \times 10^8$ lines of CLSmith code w
 
 The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL drivers. This in turn causes Clang-related defects to potentially affect multiple compilers, for example the one in Figure~\ref{lst:almost-everything-crash}. To evaluate the impact of Clang, we used debug+assert builds of every LLVM release in the past 24 months and processed 75,000 DeepSmith kernels through the Clang front-end (this includes the lexer, parser, and type checker, but not code generation).
 
-Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 5.0.0.
+Figure~\ref{fig:clangs} shows that the crash rate of the Clang front-end is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 5.0.0.
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
 Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between some releases. Notably, the current development trunk has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 were triggered by some kernels in the development trunk but not under prior release. We have submitted bug reports for each of the three assertions triggered in the development trunk, and two distinct unreachables.
 
