--- a/lst/samples.tex
+++ b/lst/samples.tex
@@ -558,8 +558,36 @@
 \begin{lrbox}{\ParserFailThree}
   \hspace{1.5em}
   \begin{lstlisting}
-    void A(){double2 k; return (float4)(k, k, k, k)
+    void A(){double2 k; return (float4)(k,k,k,k)
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\DagPass}
+\begin{lrbox}{\DagPass}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    kernel void A(global half* a) {
+      int b = get_global_id(0);
+      a[b] = b * b;
+    }
   \end{lstlisting}
 \end{lrbox}
 
 
+\newsavebox{\LoopWIAnalysisPass}
+\begin{lrbox}{\LoopWIAnalysisPass}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    kernel void A(global int* a, const int b, const int c) {
+      int d; int e; int f = 0;
+      for (int g = b >> 1; g > 1; g >>= 1) {
+        barrier(1);
+        for (int h = c; h < g; h += d) {
+          int i = f * (2 * h + 1) - 1;
+          int j = f * (2 * h + 2) - 1;
+          a[j] += a[i];
+        }
+      }
+    }
+  \end{lstlisting}
+\end{lrbox}
