--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -62,9 +62,9 @@ Compilers should produce meaningful diagnostics when inputs are invalid, yet we 
 
 % We do not enforce this requirement on DeepSmith productions, and have discovered dozens of compiler defects induced by \emph{invalid} or \emph{unexpected} inputs.
 
-The use of undeclared identifiers is a core error diagnostic which one would expect to be robust in a mature compiler. DeepSmith discovered cases in which an undeclared identifier crashes Testbed $10\pm$. For example, the undeclared identifier \texttt{c} in Figure~\ref{lst:oclgrind-uncorrected-typos} raises an assertion during semantic analysis of the AST when used as an array index.
+The use of undeclared identifiers is a core error diagnostic which one would expect to be robust in a mature compiler. DeepSmith discovered cases in which an undeclared identifier crashes Testbeds $10\pm$. For example, the undeclared identifier \texttt{c} in Figure~\ref{lst:oclgrind-uncorrected-typos} raises an assertion during semantic analysis of the AST when used as an array index.
 
-Type errors were an occasional cause of compile-time defect. Figure~\ref{lst:nvidia-recursion-segfault} induces an error in NVIDIA compilers due to an implicit conversion between global to constant address qualifiers. Worse, we found that Testbed $3\pm$ would loop indefinitely on some kernels containing implicit conversions from a pointer to an integer, as shown in Figure~\ref{lst:beignet-ptr-int-spin}. While spinning, the compiler would consume an increasing amount of host memory until the entire system memory is depleted and the process crashes. % This would be a nice one to have fixed.
+Type errors were an occasional cause of compile-time defect. Figure~\ref{lst:nvidia-recursion-segfault} induces an error in NVIDIA compilers due to an implicit conversion between global to constant address qualifiers. Worse, we found that Testbeds $3\pm$ would loop indefinitely on some kernels containing implicit conversions from a pointer to an integer, as shown in Figure~\ref{lst:beignet-ptr-int-spin}. While spinning, the compiler would consume an increasing amount of host memory until the entire system memory is depleted and the process crashes. % This would be a nice one to have fixed.
 
 % \paragraph{Code Generation} %
 Occasionally incorrect program semantics will remain undetected until late in the compilation process. Both Figures~\ref{lst:intel-gt2-double-assertion} and~\ref{lst:beignet-scalarize-insert} pass the type checker and semantic analysis, but trigger compiler assertions during code generation.
@@ -120,7 +120,7 @@ Parser development is a mature and well understood practice. We uncovered parser
 \paragraph{Compiler Hangs} %
 As expected, some compiler behavior is optimization sensitive. Testbeds $1+$ and $2+$ hang on large loop bounds, shown in Figure~\ref{lst:nvidia-opt-loop-hang}. All commercial Intel compilers we tested hang during optimization of non-terminating loops (Figure~\ref{lst:intel-inf-loop}).
 
-Testbed $7\pm$, loops indefinitely during compilation of the simple kernel in Figure~\ref{lst:xeon-phi-spin}.
+Testbeds $7\pm$, loop indefinitely during compilation of the simple kernel in Figure~\ref{lst:xeon-phi-spin}.
 
 \paragraph{Other errors} %
 
@@ -210,7 +210,7 @@ Figure~\ref{lst:oclgrind-race-switch} shows a simple program in which thread ide
 
 \paragraph{Latent Compile-time Defects} Sometimes, invalid compiler inputs may go undetected, leading to runtime defects only upon program execution. Since CLSmith enumerates only well-formed programs, this class of bugs cannot be discovered.
 
-Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in which a kernel containing an undefined symbol will successfully compile without warning on Testbed~$8\pm$, then crash the program when attempting to run the kernel. We have reported this issue to the developers.
+Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in which a kernel containing an undefined symbol will successfully compile without warning on Testbeds~$8\pm$, then crash the program when attempting to run the kernel. We have reported this issue to the developers.
 
 %\subsection{Gray Areas and False Positives}
 %
@@ -383,10 +383,10 @@ CLSmith produced many \bto results across 13 Testbeds. Given the large kernel si
   \label{lst:beig-assertions}
 \end{figure}
 
-The integrated GPU Testbed ($3\pm$) frequently failed to compile CLSmith kernels, resulting in over 10k \bc and \bto results.
+The integrated GPU Testbeds ($3\pm$) frequently failed to compile CLSmith kernels, resulting in over 10k \bc and \bto results.
 % 10,318
 % SELECT stderr,COUNT(*) FROM CLSmithResults LEFT JOIN CLSmithMetas ON CLSmithResults.id=CLSmithMetas.id WHERE testbed_id=13 AND CLSmithResults.outcome='bc' AND cumtime < 48 * 3600 GROUP BY CLSmithResults.stderr;
-Of the build crashes, 68\% failed silently, and the remainder were caused by the same two compiler assertions for which DeepSmith generated 4 line test cases, shown in Figure~\ref{lst:beig-assertions}. DeepSmith also triggered silent build crashes in Testbed $3\pm$, and a further 8 distinct compiler assertions.
+Of the build crashes, 68\% failed silently, and the remainder were caused by the same two compiler assertions for which DeepSmith generated 4 line test cases, shown in Figure~\ref{lst:beig-assertions}. DeepSmith also triggered silent build crashes in Testbeds $3\pm$, and a further 8 distinct compiler assertions.
 
 % bf column: CLSmith generated 1 unique build failure (empty declaration). DeepSmith generated 6 unique build failures (including the same empty declaration as CLSmith).
 The 4719 \abf results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. DeepSmith also generated these statements, but with a much lower probability, given that it is an unusual construct (0.6\% of programs, versus 7.0\% of CLSmith programs).
