--- a/lst/samples.tex
+++ b/lst/samples.tex
@@ -573,6 +573,15 @@
   \end{lstlisting}
 \end{lrbox}
 
+\newsavebox{\SimplifyTheCFGPass}
+\begin{lrbox}{\SimplifyTheCFGPass}
+kernel void A(global float* a, global float* b, const int c) {
+  for (int d = 0; d < 512; d++)
+    for (d = 0; d < a; d += 32)
+      b[d] = 0;
+}
+  \end{lstlisting}
+\end{lrbox}
 
 \newsavebox{\LoopWIAnalysisPass}
 \begin{lrbox}{\LoopWIAnalysisPass}
