--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -253,7 +253,7 @@ In this section, we provide a quantitative comparison of the bug-finding capabil
   \caption{%
     % CLSmith total ``interesting'': 19415
     % DeepSmith total ``interesting'': 8272
-    Results from 48 hours of testing using CLSmith and DeepSmith. System \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\bc), build timeout (\bto), build failure (\abf), runtime crash (\arc), wrong-output (\awo), and pass (\textbf{\cmark}) results.
+    Results from 48 hours of testing using CLSmith and DeepSmith. System \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\bc), build timeout (\bto), anomalous build failure (\abf), anomalous runtime crash (\arc), anomalous wrong-output (\awo), and pass (\textbf{\cmark}) results.
   }
   \label{tab:megatable}
 \end{table*}
