Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -9111,10 +9111,10 @@
     issn = {01903918}
 }
 
-@article{Allamanis2016,
+@inproceedings{Allamanis2016,
     title = {{A Convolutional Attention Network for Extreme Summarization of Source Code}},
     year = {2016},
-    journal = {arXiv:1602.03001},
+    booktitle = {ICML},
     author = {Allamanis, M. and Peng, H. and Sutton, C.},
     keywords = {neural attention models, source code naturalness}
 }
@@ -11657,7 +11657,7 @@
     title = {{Finding Deep Compiler Bugs via Guided Stochastic Program Mutation}},
     year = {2015},
     booktitle = {OOPSLA},
-    author = {Le, Vu and Sun, Chengnian and Su, Zhendong},
+    author = {Le, V. and Sun, C. and Su, Z.},
     keywords = {automated testing, compiler testing, equivalent program variants, markov chain monte carlo}
 }
 
@@ -11683,7 +11683,7 @@
     title = {{Learning to Prioritize Test Programs for Compiler Testing}},
     year = {2017},
     booktitle = {ICSE},
-    author = {Chen, Junjie and Bai, Yanwei and Hao, Dan and Xiong, Yingfei and Zhang, Hongyu and Xie, Bing}
+    author = {Chen, J. and Bai, Y. and Hao, D. and Xiong, Y. and Zhang, H. and Xie, B.}
 }
 
 @article{White,
