Update on Overleaf.

--- a/lst/samples.tex
+++ b/lst/samples.tex
@@ -487,8 +487,7 @@
   \hspace{1.5em}
   \begin{lstlisting}
     kernel void A() {
-      local float a;
-      A(a);
+      local float a; A(a);
     }
   \end{lstlisting}
 \end{lrbox}
